# tuya-iot-device-sdk-c-v1

./: .gitignore  CMakeLists.txt  README.md
examples/switch_demo/: CMakeLists.txt  switch_demo.c
farmostat/: .goutputstream-KGL330  CMakeLists.txt  farmostat.c  qrencode_print.c  tuya_config.h
include/: atop_base.h  atop_service.h  mqtt_service.h  tuya_url.h
libraries/coreJSON/: MISRA.md
